--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@
 *.sln.docstates
 .gitignore
 
+# appsettings.json
+appsettings.json
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
