--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@
 .gitignore
 
 # appsettings.json
-appsettings.json
+*appsettings.json
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
